    now accommodates if the table + column name is greater 
    than 63 characters using the same logic Postgresql uses.  
    [ticket:1083]

  - Added an additional libpq message to the list of "disconnect"
    exceptions, "could not receive data from server"
    [ticket:2044]

- mysql
  - oursql dialect accepts the same "ssl" arguments in 
    create_engine() as that of MySQLdb.  [ticket:2047]

0.6.6
=====
- orm
  - Fixed bug whereby a non-"mutable" attribute modified event
    which occurred on an object that was clean except for
    preceding mutable attribute changes would fail to strongly
    reference itself in the identity map. This would cause the
    object to be garbage collected, losing track of any changes
    that weren't previously saved in the "mutable changes"
    dictionary.

  - Fixed bug whereby "passive_deletes='all'" wasn't passing
    the correct symbols to lazy loaders during flush, thereby
    causing an unwarranted load.  [ticket:2013]

  - Fixed bug which prevented composite mapped
    attributes from being used on a mapped select statement. 
    [ticket:1997]. Note the workings of composite are slated to 
    change significantly in 0.7.

  - active_history flag also added to composite(). 
    The flag has no effect in 0.6, but is instead 
    a placeholder flag for forwards compatibility,
    as it applies in 0.7 for composites.
    [ticket:1976]

  - Fixed uow bug whereby expired objects passed to 
    Session.delete() would not have unloaded references 
    or collections taken into account when deleting
    objects, despite passive_deletes remaining at 
    its default of False.  [ticket:2002]

  - A warning is emitted when version_id_col is specified
    on an inheriting mapper when the inherited mapper
    already has one, if those column expressions are not
    the same.  [ticket:1987]

  - "innerjoin" flag doesn't take effect along the chain
    of joinedload() joins if a previous join in that chain